<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handlers"
            type="com.first.release.examnotes.activities.ExamInsertEventHandlers" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical">

        <!-- FIXME tab itemのfontとtextsizeを変更する-->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/home_and_history_tab_layout"
            style="@style/home_and_history_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:background="@color/white"
            android:elevation="14dp"
            app:tabSelectedTextColor="@color/blackTwo"
            app:tabTextColor="@color/black">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_serif_jp_black"
                android:text="@string/tab_home" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_serif_jp_black"
                android:text="@string/tab_history" />
        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exam_insert_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:onClick="@{handlers::onClickSaveDraft}"
                android:text="@string/exam_insert_save_draft_button"
                android:textColor="@color/sky_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{handlers::onClickRemoveExam}"
                android:text="@string/exam_insert_remove_exam_button"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{handlers::onClickNext}"
                android:text="@string/exam_insert_next_exam"
                android:textColor="@color/sky_blue" />

        </LinearLayout>
    </LinearLayout>

</layout>